syntax = "proto3";
// import healthcheck payment
import "proto/healthcheck/healthcheck.proto";
package event_aggregate;

service EventAggregateService {
    // automate grpc healthcheck method
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    
    rpc createAggregate (CreateAggregateRequest) returns (CreateAggregateResponse);
    rpc createEvent (CreateEventRequest) returns (CreateEventResponse);
}

message CreateAggregateRequest {
    string aggregate_type = 1;
    string data = 2;
}

message CreateAggregateResponse {
    int64 id = 1;
}

message CreateEventRequest {
    int64 aggregate_id = 1;
    string event_type = 2;
    string data = 3;
}

message CreateEventResponse {
    int64 event_id = 1;
}